--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
     <a href="https://www.gmail.com">
     <i class="social-icon fa fa-envelope" style="color:black"></i>
     </a>
-    <p>© Copyright 2023 TinDog</p>
+    <p>Done By Saumya Chaubey © Copyright 2023-2024 TinDog</p>
   </footer>
 </body>
 </html>
